--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,11 @@
-<h1>Sample App</h1>
-<p>
-This is the home page for the
-<a href="http://www.railstutorial.org/">Ruby on Rails
-Tutorial</a>
-sample application.
-</p>
+<div class="jumbotron text-center">
+  <div class="container">
+    <h1>Welcome to Sample App</h1>
+    <p>
+      This is the home page for the <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a> sample application.
+    </p>
+    <%= link_to 'Sign Up', signup_path, class: 'btn btn-lg btn-primary' %>
+
+  </div>
+</div>
+<%= link_to image_tag('rails.png', alt: 'Rails Logo'), 'http://rubyonrails.org/' %>
