--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,18 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container mt-3">
+
+      <% flash.each do |message_type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#
+        {message_type}") %>
+      <% end %>
+
       <%= yield %>
+
     </div>
     <%= render 'layouts/footer' %>
+    <div class="container">
+      <%= debug(params) if Rails.env.development? %>
+    </div>
   </body>
 </html>
