--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,26 @@
 <% provide(:title, 'Sign up') %>
 <h1 class="text-center">Sign up</h1>
-<p>This is a sign up for our users</p>
+
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+
+    <%= render 'shared/error_messages' %>
+
+    <%= form_for(@user, url: signup_path) do |f| %>
+
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
+
+      <%= f.label :email %>
+      <%= f.email_field :email, class: 'form-control' %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %>
+
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+
+      <%= f.submit 'Create an Account', class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+</div>
