Implement basic login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,7 @@
     <div class="container mt-3">
 
       <% flash.each do |message_type, message| %>
-        <%= content_tag(:div, message, class: "alert alert-#
-        {message_type}") %>
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
       <% end %>
 
       <%= yield %>
