Finish user index edit update and destroy

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,9 +83,9 @@ input {
   height: auto !important;
 }
 #error_explanation {
-  color: red;
+  color: #b92a37;
   ul {
-    color: red;
+    color: #b92a37;
     margin: 0 0 30px 0;
   }
 }
@@ -106,6 +106,18 @@ input {
   width: auto;
   margin-left: 0;
 }
+
+/* Users index */
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid$light-gray;
+  }
+}
+
 /* footer */
 footer {
   margin-top: 45px;
