--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,14 +10,14 @@
           <li class="nav-item"><%= link_to 'Home', root_path, class: 'nav-link' %></li>
           <li class="nav-item"><%= link_to 'Help', help_path, class: 'nav-link' %></li>
           <% if logged_in? %>
-            <%= link_to 'Users', '#', class: 'nav-link' %>
+            <%= link_to 'Users', users_path, class: 'nav-link' %>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Account
+                <%= current_user.name %>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <%= link_to 'Profile', current_user, class: 'dropdown-item' %>
-                <%= link_to 'Settings', '#', class: 'dropdown-item' %>
+                <%= link_to 'Settings', edit_user_path(current_user), class: 'dropdown-item' %>
                 <div class="dropdown-divider"></div>
                 <%= link_to 'Log out', logout_path, method: :delete, class: 'dropdown-item'%>
               </div>
