Add user following

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,6 +69,48 @@ aside {
 .gravatar_edit {
   margin-top: 15px;
 }
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+.gravatar_edit {
+  margin-top: 15px;
+}
+.stats {
+  overflow: auto;
+  margin-top: 0;
+  padding: 0;
+  a {
+    float: left;
+    padding: 0 10px;
+    border-left: 1px solid $light-gray;
+    color: gray;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+    &:hover {
+      text-decoration: none;
+      color: blue;
+    }
+  }
+  strong {
+    display: block;
+  }
+}
+.user_avatars {
+  overflow: auto;
+  margin-top: 10px;
+  .gravatar {
+    margin: 1px 1px;
+  }
+  a {
+    padding: 0;
+  }
+}
+.users.follow {
+  padding: 0;
+}
 /* forms */
 input,
 textarea,
@@ -159,6 +201,16 @@ span.picture {
   margin-top: 10px;
   input {
     border: 0;
+  }
+}
+
+// paginations
+div.pagination {
+  .pagination {
+    li {
+      padding-right: 1em;
+      font-size: 1em;
+    }
   }
 }
 
